Pinned the requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch
-pytorch-lightning
-torchvision
-tensorflow
-tensorflow_datasets
+torch==1.7.0
+pytorch-lightning==1.0.4
+torchvision==0.8.1
+tensorflow==2.3.1
+tensorflow-datasets==4.0.1
