s/grid_arg/grid_args/   	modified:   gridai_cifar10_ligntning.yml  	modified:   gridai_mnist_keras.yml  	modified:   gridai_mnist_lightning.yml  	modified:   gridai_mnist_pytroch.yml

--- a/.github/workflows/gridai_mnist_lightning.yml
+++ b/.github/workflows/gridai_mnist_lightning.yml
@@ -14,7 +14,7 @@ jobs:
     uses: robert-s-lee/actions/.github/workflows/gridai_run.yml@main
     with:
       script_name: plmnist.py
-      grid_arg: --localdir --instance_type t2.medium --dependency_file requirements.txt --framework lightning
+      grid_args: --localdir --instance_type t2.medium --dependency_file requirements.txt --framework lightning
     secrets:
       username: ${{ secrets.GRIDAI_USERNAME }} 
       key: ${{ secrets.GRIDAI_KEY }}
