adjust scheduled to once a day 	modified:   gridai_cifar10_ligntning.yml 	modified:   gridai_mnist_keras.yml 	modified:   gridai_mnist_lightning.yml 	modified:   gridai_mnist_pytroch.yml

--- a/.github/workflows/gridai_mnist_lightning.yml
+++ b/.github/workflows/gridai_mnist_lightning.yml
@@ -4,10 +4,10 @@ name: "gridai mnists lightning"
 on:
   # push:
   pull_request:  
-  #schedule:
+  schedule:
   # run at 3 min past the hour every day
   # MIN HOUR DOM MON DOW CMD
-  #  - cron: 43 5,12,20 * * *
+    - cron: 22 2 * * *
 
 jobs:
   lightning:
