--- a/.github/workflows/gridai_cifar10_ligntning.yml
+++ b/.github/workflows/gridai_cifar10_ligntning.yml
@@ -4,10 +4,10 @@ name: "gridai cifar10 lightning"
 on:
   # push:
   pull_request:  
-  #schedule:
+  schedule:
   # run at 3 min past the hour every day
   # MIN HOUR DOM MON DOW CMD
-  #  - cron: 43 5,12,20 * * *
+    - cron: 01 0 * * *
 
 jobs:
   lightning:
