--- a/.github/workflows/gridai_mnist_pytroch.yml
+++ b/.github/workflows/gridai_mnist_pytroch.yml
@@ -7,7 +7,7 @@ on:
   #schedule:
   # run at 3 min past the hour every day
   # MIN HOUR DOM MON DOW CMD
-  #  - cron: 43 5,12,20 * * *
+    - cron: 33 3 * * *
 
 jobs:
   pytorch:
