--- a/.github/workflows/gridai_mnist_pytroch.yml
+++ b/.github/workflows/gridai_mnist_pytroch.yml
@@ -4,7 +4,7 @@ name: "gridai mnists"
 on:
   # push:
   pull_request:  
-  #schedule:
+  schedule:
   # run at 3 min past the hour every day
   # MIN HOUR DOM MON DOW CMD
     - cron: 33 3 * * *
