--- a/.github/workflows/gridai_mnist_lightning.yml
+++ b/.github/workflows/gridai_mnist_lightning.yml
@@ -15,6 +15,7 @@ jobs:
     with:
       script_name: plmnist.py
       grid_args: --localdir --instance_type t2.medium --dependency_file requirements.txt --framework lightning
+      script_args: --max_epochs 3	
     secrets:
       username: ${{ secrets.GRIDAI_USERNAME }} 
       key: ${{ secrets.GRIDAI_KEY }}
