add mnist pytorch description 	modified:   gridai_mnist_pytroch.yml

--- a/.github/workflows/gridai_mnist_pytroch.yml
+++ b/.github/workflows/gridai_mnist_pytroch.yml
@@ -1,5 +1,5 @@
 # https://docs.github.com/en/actions/learn-github-actions/reusing-workflows
-name: "gridai mnists"
+name: "gridai mnists pytorch"
 
 on:
   # push:
