--- a/.github/workflows/gridai_mnist_pytroch.yml
+++ b/.github/workflows/gridai_mnist_pytroch.yml
@@ -15,7 +15,7 @@ jobs:
     with:
       script_name: pytorch.py
       grid_args: --localdir --instance_type t2.medium --dependency_file requirements.txt --framework torch
-      script_args: --max_epochs 3	
+      script_args: --max_epochs 3
     secrets:
-      gridai_username: ${{ secrets.GRIDAI_USERNAME }}
-      gridai_key: ${{ secrets.GRIDAI_KEY }}
+      gridai-username: ${{ secrets.GRIDAI_USERNAME }}
+      gridai-key: ${{ secrets.GRIDAI_KEY }}
