--- a/.github/workflows/gridai_mnist_lightning.yml
+++ b/.github/workflows/gridai_mnist_lightning.yml
@@ -14,7 +14,7 @@ jobs:
     uses: robert-s-lee/actions/.github/workflows/gridai_run_artifact.yml@main
     with:
       script-name: plmnist.py
-      grid-args: --localdir --instance_type t2.medium --dependency_file requirements.txt --framework lightning
+      grid-args: --framework lightning
       script-args: --max_epochs 3	
     secrets:
       gridai-username: ${{ secrets.GRIDAI_USERNAME }}
